--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,13 @@
+@import url("./fonts.css");
+/* ROOT */
+:root {
+  --primary: #5267df;
+  --danger: #fa5959;
+  --darkslt: #242a45;
+  --secondary: #9194a2;
+  --fonts-rubik: "Rubik";
+}
+
 /* GLOBAL */
 html {
   box-sizing: border-box;
@@ -17,7 +27,7 @@ body {
   height: 100%;
   padding: 0;
   margin: 0;
-  font-family: "Arial", sans-serif;
+  font-family: var(--fonts-rubik);
   font-size: 16px;
   line-height: 1.5;
   background-color: #fff;
@@ -28,7 +38,6 @@ img {
   max-width: 100%;
   height: auto;
 }
-
 
 /* AUTOFILL-STYLES */
 /*input:-webkit-autofill,
@@ -45,7 +54,6 @@ select:-webkit-autofill:focus {
   -webkit-box-shadow: 0 0 0px 1000px #fff inset;
 }*/
 
-
 /* PLACEHOLDER-STYLES */
 /*::-webkit-input-placeholder,
 ::-moz-placeholder,
@@ -54,7 +62,6 @@ select:-webkit-autofill:focus {
   color: rgba(52, 49, 61, 0.5);
   opacity: 1;
 }*/
-
 
 /* VISUALLY-HIDDEN */
 .visually-hidden {
@@ -68,29 +75,110 @@ select:-webkit-autofill:focus {
   overflow: hidden;
 }
 
-
 /* CONTAINER */
 .container {
   width: 100%;
-  max-width: 1200px;
-  padding-left: 50px;
-  padding-right: 50px;
+  max-width: 1104px;
   margin-left: auto;
   margin-right: auto;
 }
 
+/* HEADER-CONTENT */
+.header {
+  width: 100%;
+  height: 800px;
+  padding-top: 48px;
+  background-color: white;
+  position: relative;
+}
+
+.navbar {
+  width: 100%;
+  height: 46px;
+  padding-bottom: 68px;
+  margin-bottom: 115px;
+}
+.navigation {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.link-logo {
+  width: 40%;
+  margin-right: 302px;
+}
+.group-items {
+  width: 60%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.site-nav-list {
+  list-style-type: none;
+  display: flex;
+}
+.site-list-item:not(:last-child) {
+  margin-right: 40px;
+}
+.site-item-link {
+  color:var(--darkslt);
+  font-family: var(--fonts-rubik);
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 17px; /* 130.769% */
+  letter-spacing: 1.5px;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+.site-item-link:hover{
+  color:var(--danger);
+  transition: all .8s ease;
+}
+.login-btn {
+  display: inline-block;
+  background-color: var(--danger);
+  color: white;
+  padding: 12px 34px;
+  text-decoration: none;
+  border: 3px solid;
+  border-radius: 5px;
+  transition: background-color .5s ease-in;
+  box-shadow: 0px 8px 8px -4px rgba(73, 93, 207, 0.2);
+}
+.login-btn:hover{
+  background-color:transparent;
+  border: 3px solid var(--danger);
+  color:var(--danger);
+}
+.site-hero-content{
+  display: flex;
+  align-items:center;
+}
+.site-left-content{
+  width: 540px;
+  height: 292px;
+}
+.site-right-content img{
+  background:white;
+}
+.site-right-content{
+  background-image: url('../img/rec-right.svg');
+  position: absolute;
+  background-position: right ;
+  background-size: cover;
+}
+/* HEADER-CONTENT */
 
 /* MAIN-CONTENT */
 .main-content {
   flex-grow: 1;
 }
+/* MAIN-CONTENT */
 
-@media
-only screen and (-webkit-min-device-pixel-ratio: 2),
-only screen and (   min--moz-device-pixel-ratio: 2),
-only screen and (     -o-min-device-pixel-ratio: 2/1),
-only screen and (        min-device-pixel-ratio: 2),
-only screen and (                min-resolution: 192dpi),
-only screen and (                min-resolution: 2dppx) {
-
+@media only screen and (-webkit-min-device-pixel-ratio: 2),
+  only screen and (min--moz-device-pixel-ratio: 2),
+  only screen and (-o-min-device-pixel-ratio: 2/1),
+  only screen and (min-device-pixel-ratio: 2),
+  only screen and (min-resolution: 192dpi),
+  only screen and (min-resolution: 2dppx) {
 }
